[package]
name = "shader-reflection"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "inspect_shader"
path = "src/bin/inspect_shader.rs"

[[bin]]
name = "generate_glue"
path = "src/bin/generate_glue.rs"

[features]
default = ["convert"]
codegen = ["dep:proc-macro2", "dep:syn", "dep:quote", "dep:prettyplease"]
convert = ["dep:naga"]
glam = ["dep:glam"]

[dependencies]
spirv = { version = "0.3", features = ["serialize", "deserialize"] }
rspirv = { version = "0.12" }
naga = { version = "22.1", optional = true }

paste = "1.0"
proc-macro2 = { version = "1.0", optional = true }
syn = { version = "2.0", optional = true, features = ["full"] }
quote = { version = "1.0", optional = true }
prettyplease = { version = "0.2", optional = true }

serde = { version = "1.0", features = ["derive"] }
bincode = "2.0.0-rc"

glam = { version = "0.29", optional = true }

thiserror = "1.0"
log = "0.4"
